2008-04-29    <Martin@BLUEMAX>

	* first release
