@@ -8,7 +8,7 @@ build_requires:
   Test::Pod: 0
   Test::Pod::Coverage: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.72'
+generated_by: 'Module::Install version 0.75'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -23,4 +23,4 @@ requires:
   Pod::Coverage: 0
   RDF::Simple::Serialiser: 0
   perl: 5
-version: 1.007
+version: 1.009
